infrastructure/vault/vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.18.1
          args:
            - "server"
            - "-dev"  # Change this to a more secure configuration for production
          ports:
            - containerPort: 8200
