infrastructure/vault/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  ports:
    - port: 8200
      targetPort: 8200
      protocol: TCP
  selector:
    app: vault
